--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/images/splashscreen.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
